--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>header</header>
-    <main id="main">content</main>
+    <main id="main">The content</main>
     <footer>bye</footer>
     <script src="js/script.js"></script>
 </body>
